resolves #4523 remove extra border below doctitle when sidebar toc is collapsed into main content area (PR #4524)

--- a/src/stylesheets/asciidoctor.css
+++ b/src/stylesheets/asciidoctor.css
@@ -638,8 +638,7 @@ body > div[id]::after,
   border-top: 1px solid #dddddf;
 }
 
-#header > h1:only-child,
-body.toc2 #header > h1:nth-last-child(2) {
+#header > h1:only-child {
   border-bottom: 1px solid #dddddf;
   padding-bottom: 8px;
 }
@@ -745,6 +744,11 @@ body.toc2 #header > h1:nth-last-child(2) {
   body.toc2 {
     padding-left: 15em;
     padding-right: 0;
+  }
+
+  body.toc2 #header > h1:nth-last-child(2) {
+    border-bottom: 1px solid #dddddf;
+    padding-bottom: 8px;
   }
 
   #toc.toc2 {
